samples/_failures_safe/1761077059_1047b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32d87d67.c: In function ‘main’:
./samples/SAFE/__tmp_32d87d67.c:166:50: error: expected ‘)’ at end of input
  166 |         if (scanf("%d %d %d", &from, &to, &weight
      |                  ~                               ^
      |                                                  )
./samples/SAFE/__tmp_32d87d67.c:166:9: error: expected declaration or statement at end of input
  166 |         if (scanf("%d %d %d", &from, &to, &weight
      |         ^~
./samples/SAFE/__tmp_32d87d67.c:166:9: error: expected declaration or statement at end of input
